Adds logic for 3 more fields
